Agregado de logica y tarjetas con datos en MenuPrincipal